# titans-pytorch

./: pyproject.toml
titans_jax/: gpt.py  gpt_jax.py  jitans.py
titans_pytorch/: associative_scan.py  mac_transformer.py  titans.py
