[project]
name = "titans-pytorch"
version = "0.1.18"
description = "Titans"
authors = [{ name = "Phil Wang", email = "lucidrains@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'neural memory module',
    'test time training',
    'linear attention',
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "accelerated-scan>=0.2.0",
    "axial_positional_embedding>=0.3.9",
    "beartype>=0.19.0",
    "chex>=0.1.88",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "flax>=0.8.5",
    "hyper-connections>=0.1.9",
    "jax[cuda12]>=0.4.30",
    "jaxtyping>=0.2.36",
    "ninja>=1.11.1.3",
    "rotary-embedding-torch>=0.8.6",
    "tensordict",
    "torch>=2.2",
    "tqdm>=4.67.1",
    "transformers>=4.48.1",
    "typeguard>=4.4.1",
    "wandb>=0.19.4",
    "x-transformers>=1.44.4",
]

[project.urls]
Homepage = "https://pypi.org/project/titans-pytorch/"
Repository = "https://github.com/lucidrains/titans-pytorch"


[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4"]
examples = ["adam-atan2-pytorch>=0.1.18", "wandb>=0.19.4"]

[tool.ruff.lint]
ignore = ["F722"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["titans_pytorch"]

[tool.uv.sources]
tensordict = { git = "https://github.com/pytorch/tensordict" }
